--- a/kubernetes/apps/default/authentik/secret.sops.yaml
+++ b/kubernetes/apps/default/authentik/secret.sops.yaml
@@ -6,10 +6,10 @@ metadata:
 type: Opaque
 data:
     #ENC[AES256_GCM,data:LmvvWEHr5+HO4XBINHxfsr7UfuLLLgRuTeBt+yryiCeL1n0EdWD71AOc/u85kKhcwKbrnVn61E474K/q9HDAK5J+9WlYpE+fq9667RZtn7zdwm/uBaAOxZG1Zw6RvKx479F3DFFWGFnhK5jOUuGZ9Xg59Iw4HQLnslEtrgRcFE0ijxxukrvQ27gAq1ty+F28tB+JCvXJDTbIu8Y=,iv:FnMU+YntoqTDvpXutmm7iOXwtMwUKIZz2oaN6+bbCfg=,tag:NXxoB0cu7BSv3ChBG3sO+Q==,type:comment]
-    POSTGRES_PASSWORD: ENC[AES256_GCM,data:iRLa32OS7wUClCX/BecYYlE6J5sxlAcTs0m5zitJBZQxm7IiZBHsqiDgEkrIB8S6Sd8KQkpD5/Ft0wm2kzgZt75gP3reLmN0WV60h3pGs42PXGsgYSkE2EORpIKNAGM1i70UFPm1cqq+N/ThjDo5Z8VHcUp/VvdBKz73KZOhmKOt/eGCJklP+BDIScDuk+8mU9PCc2YWuvwfdXS2goYytjXmvAuBCjqozqsw9GMnC80N/BgEUCwfr5P4slevdoEC/NQlGy+IVg==,iv:6/49qhqZCZGquKFQiNnlF6vsTtujvabP4v+i5c12vVs=,tag:7byjHwodTN0uQDvfGRRjlQ==,type:str]
-    AUTHENTIK_POSTGRESQL__PASSWORD: ENC[AES256_GCM,data:t9pIm9pVM7SH/gPOsH0ZeTHOxtP9jp4sxlwmj27mAligak9BU8Flbxmm0DbSRS60eXtUDynL2x7+AAwr+tlWJIALJKZ0vFXySOUggOhNW1M1pAsoLXeQhVSq6y1f9etfZi1GBcZePr+qPwFgSCAuv9IJYDJFSyMV3XZRtlrlxuZPBVdiz04yxkTZec74XmiYLoq2SRM4TmD8YvgDqkuCJ067M1LD7JdnAGUKjhOzpQk4Q6gVF8E2JSt5KBr4Lf1RJivQ0UuDWQ==,iv:eDn9Xd2gi3jFIPp+Vm6FfpXa1JzIHTyAKAQiet28cEA=,tag:sJ85IXC5iKirCoY3qbVfxA==,type:str]
-    AUTHENTIK_REDIS__PASSWORD: ENC[AES256_GCM,data:nQ/pj5o2q+KgvopWR612XDQcPwLhL4iC8zBPCm9pXC4NPHRYPRRgo4M3aVhggE9qJ5YIYazsTWqcuDniRA0a6PVe4dQ+WtzCodMCyJgC9A38sPdvzhTbyPCMGeF+arglOFTFWBPkn/XyhA/U08ZvoiK67Z2uOco0exc5h0JfOJZM+uNLPiuiNZGmCTAxC4zZVAPx74kWJ7e503C9NpwHC9ZbMhF5mq+7Ymv93MlAn35C1m6B3i80UFOtwtFLDGYZofRDY6mfUw==,iv:gOuvEzU59q3gF8dGifVIOcxSNrhpgD+nknIJupWVUEI=,tag:hBIkW+dzGj2h1sOu/BeRoQ==,type:str]
-    AUTHENTIK_SECRET_KEY: ENC[AES256_GCM,data:GNbCqIJQYQsu/19QnJX9HLVPgySuY/VEryh/w+6qvucijx57trwdM1CyeFjGrqhws6DVKVH/ewk/qI3DPDXPsw96WVdDy/w44gboOP/TYc38W+oCQ5rn7TBk2DjLMFUVzUSb4+Ra/XNwudNaX3xfRGzYDmX8i1ONc7soEiHVyY78mnbe3ZyvPfhLa04ULYTmN6bDa8YGIbec50iJDG9xeuqzgeg+WTghJ9D+8TP7Y4V7y48B+OHf37uuMUVpAy1LAj9j1AdYeQ==,iv:DKrGbTTnxTkWeoE9liCQzTukVoQNzBA2epR6uVpesk8=,tag:JAOjPk4/hzjZkNNZ9zA7Jw==,type:str]
+    POSTGRES_PASSWORD: ""
+    AUTHENTIK_POSTGRESQL__PASSWORD: ""
+    AUTHENTIK_REDIS__PASSWORD: ""
+    AUTHENTIK_SECRET_KEY: ""
 sops:
     kms: []
     gcp_kms: []
@@ -25,8 +25,8 @@ sops:
             aCtPeFp3bEk3bzZ0cGlPdHgybFF4NzAKcJ+ATCbW381sOWWL9YGCftRMKgvkGo2J
             sgbmd7t7qI+XOyLuU9SAVPRWORN+rfjN6HuQ+VmBykMnEA2FRxbg2Q==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-10-21T20:39:20Z"
-    mac: ENC[AES256_GCM,data:OVHBs+16LjxaFRprovAjcjkKudz1Cz7wsW9i8QKfrIf2r7PAUTVhGChk1q6HUDni6TE4K4exWqlyolvwVYEpeKWUS580+ZZXjl6OmmtXc0iEJSLawbSAWWbJxvF/aKO7z8O+ofG8huwhNsnE5mUSGObe3QJ/85lNquq03HBuprQ=,iv:Kyjzl/o1jB/DmabrKn0KvcIFw13252Roqn9A5iqxDdE=,tag:COiSr6WjeZKr2Q0YpYTSAA==,type:str]
+    lastmodified: "2024-10-21T20:45:44Z"
+    mac: ENC[AES256_GCM,data:nmGZ8kaJ1dCTi9u5/oR0KdjWAcxEfjpRVxZv9AdWK07Ev6/ml/YA1bRKzhQpHBKg8pyw6M+0YxyBTi2f+UR+EPwwS7LxZMfISbHqurCSn+SoovR+hZsEldWPdfI1/v0k3Xb8U4+0UaTAqrBFdCX888jXxDus2hgwNVBDHSarKcQ=,iv:3goPKHG8DViyZhXG9vv3jdrtXPKZHCO+rE11/pU6huw=,tag:m/05X6f2pJdLVuEJu7qAoA==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.9.1
