--- a/kubernetes/apps/default/bazarr/secret.sops.yaml
+++ b/kubernetes/apps/default/bazarr/secret.sops.yaml
@@ -5,7 +5,7 @@ metadata:
     namespace: default
 type: Opaque
 stringData:
-    API_KEY: ENC[AES256_GCM,data:NNNgUG2tcskIxqafLlFCnfgjmfWDWDeMbLq26ZBFeKtVXd+4jap+P0/JM8GNOuoWxpqIxhlpmWmuDjfy1eywV8fBL4nnJWn85phA8g2fKaH14+YN05Qlm1rw64uYwqBjm5e46EmmPZYy1vTHBo3aQ0jEri8aUiMmJB5r5gsaoxy1/ZB/1dfd4u8gi5qvMreip2h4K0t2EQ==,iv:4HxBhTF+6n1msREIDefrqKdjKGIvgEMe1VMImE350Ao=,tag:TBZV0+PH42hrE5csND7YWw==,type:str]
+    API_KEY: ""
 sops:
     kms: []
     gcp_kms: []
@@ -21,8 +21,8 @@ sops:
             dVVFbTI4b1hjYkp6RUFiZFQ0cmtnaGcKa7LLrgJbqqenTMuvGKLCOL/LyDyChe/G
             bmLqPMfRAmvPV6YhrzBME9pMTNN0Uoz/mJKOAVKXG7F+KbMou0Y9eA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-10-21T20:39:19Z"
-    mac: ENC[AES256_GCM,data:N1GQQ8MIon8684fnmCGdDfMXbrIJ9CkesN4RcfZakwXBJOzBwGXb6ZvJrha25Ue5y/EcaWmes+7tmDTtdKl6o4Rx54eUYKyuuuzL7hxGj+3DJJGQbSjPkbqaM7g+KpB5AC5U7KJ/2n38SjzgqRFltL2jbg3JHjAN4ORut0Dk81c=,iv:XeAAXS2bbFix6WtOeMOYZSz5yfUS4SoVIFTOPjFhEJg=,tag:22Wc6XzL3JA7yHF6tVeb7g==,type:str]
+    lastmodified: "2024-10-21T20:45:58Z"
+    mac: ENC[AES256_GCM,data:SMrWFVIHJ19dKg6KQ2213oR9MWIqFYQSUYPM+fhIASQyTFAcXKQCoqSz6k2yG38/iAJ+9u94yij5OdOGzKoZZNTd16666U4lQosBgZS8wYWzL0y9LuHK90RPqRLbgHxjqJ8mt4pe4/LIe94u/RbvfEmjPKxmo4xXfsIEmdkuXLA=,iv:ihL64x9IaOv2aGIVBdj079j/HR3wJkOYluDLrljMSgw=,tag:7CqWn+2DMtvqOU8R7OSgKg==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.9.1
