--- a/kubernetes/apps/default/doplarr/secret.sops.yaml
+++ b/kubernetes/apps/default/doplarr/secret.sops.yaml
@@ -5,7 +5,7 @@ metadata:
     namespace: default
 type: Opaque
 stringData:
-    TOKEN: ENC[AES256_GCM,data:P6qsG9MuJ+5yY/wY8vdHJojttxy8GGFN62cmi+B+VE60+jvspzZDDtljWcEcRNNYQ/lgaOdCCD1fsyNPHMrrmuGyJ2DIXb+qCT+NAjohOqboUL43x3hdYhva2h4eKna59Nos+6qQHiWrdmzks3W2cW+JtJL3AaIGn2UIVP47ylDfKsutadU3rA9cdgUxN5fUDBBzC+1YNmZbXaWVWQkexQ1Ad2FcyrQA3rQFpbb3rls0fVp8OB1r4zaLERgQzzoHBmqX62ZE6Xk3ZJQ=,iv:phX+sMatH6sqnBWII+KCOhd4ALyNF0uMDH0KB34naQQ=,tag:pVQPkGi43EWVrevkrxgRJA==,type:str]
+    TOKEN: ""
 sops:
     kms: []
     gcp_kms: []
@@ -21,8 +21,8 @@ sops:
             Q09jdE1YTzVwb2VnMmlReDNjNFJFa2sKc22p4bBquDaXa/JY8xDv7dP6kC3Ef1CU
             BFl7wwo/LwtN5L+zy39NTNz7ByQ+DvVixSYDAOtDYcID8JwMtR64Gg==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-10-21T20:39:20Z"
-    mac: ENC[AES256_GCM,data:O8NNgg38Sqj3y8/sQ55ExCmtdRLcVIUBrUd2rQ+WJ5F+DadOkxTrgmr3RlAgy03lO+85veiGd7A7LMmDykzzkOoo/1qAZ3Gw5n3kiknYfARydxRY+R4l5dovuErCBh5RegdtZr6nh0QQ11cpAz6mDJLSEgz9d2P4fTvuGxwXzH4=,iv:oa6WZC38vMq/ol/TPaXl3gZQTwcT6PGGF6+2GrjTzZs=,tag:hH27gBaqx5RkntTaHekrPg==,type:str]
+    lastmodified: "2024-10-21T20:46:07Z"
+    mac: ENC[AES256_GCM,data:OGqYsrp0WsOR9NQoN7wMcYJPinb7JWqIRyjmI51+0uVVF7jKauLmHDD5K7HscQ0Hevp0p8ecKmvS3z/xVzl5YsIy3bbYHJrhOnyqrJSfLTwb6bCdsHdlqHZifJx7DtorvjeqwYsKmh+b565bKm2TYzMOviaTBsQJffTrsTp3boA=,iv:h+s3oiovDqBZSvGKwbi/o6VaouYEGSj5VWHQcsYfY04=,tag:50oIhRF0AfSIiZUcQZg4mA==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.9.1
