--- a/kubernetes/apps/default/radarr-anime/secret.sops.yaml
+++ b/kubernetes/apps/default/radarr-anime/secret.sops.yaml
@@ -5,7 +5,7 @@ metadata:
     namespace: default
 type: Opaque
 stringData:
-    APIKEY: ENC[AES256_GCM,data:ClBcKxwiOIzIa8w/RXhS79r2z2RFmBtPYgi6rGwXl5poxZzHsrczyYkwdk36ubB2wIHrWf1QZC/zf/anesRfwv3It17BjPsFEAxAozgoZt2SKaft1hZkOmVGtD0s9BExR3eCVvPWbGrqAJwTsn2IxDrZTQtthNjTxRzjdxoMmyvq7GERULyJiUrTRO4f667ng7CPLD0xJg==,iv:kz2OTy6fMzmyredMhG25DQnmyzRPxYzDNaHpTl4mQ+Q=,tag:X0ReArlYP3i5LEuwPWbTuw==,type:str]
+    APIKEY: ""
 sops:
     kms: []
     gcp_kms: []
@@ -21,8 +21,8 @@ sops:
             WE5NUlBwK2J6RDZ2WDFXVmZHSExrZ1kKfn9a3Sr2PsIgmpZbLdh60AUOQ9n4LcGp
             dFmBJJFEkdgVaQe/wSf6TJkFrsHhgBmFleUugrLZKlYrwCaqplK20g==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-10-21T20:39:20Z"
-    mac: ENC[AES256_GCM,data:nsE6uLK/N23krOgO3qzUEq7oydNeCYmn4/gLDvBlG0eAi7Og3OC1ZElauVhAxc0ztFSGrRlHzRwhMtkDbRmCzQA77YAvcYFVqhyfnvQGlyIs/LRt9x0oRhImORSUrAM8a07NlqbhsXf3n9MAXsO27w6XOcGHFthdvc0uECFCvgE=,iv:uWTKLndjCsnnvl0aJq3EOMsWEBwP1HJeipSWVt/T9JE=,tag:c6h+l1yucD3VruVHr5r9qg==,type:str]
+    lastmodified: "2024-10-21T20:51:16Z"
+    mac: ENC[AES256_GCM,data:7MHYA2GiJal0RrrKa57AtKn0XD0TSXsF1OVqMLcFCnUMqdqkJAIK5YObs2B/VE8xtxaaDKsuQWfxT16nf83vu4qHAPiJCLihU0NdUUsruuNXLI2ZQHaWlrHQUV5UwbcIHC/pMDOVjAkUmnn9Jmd2tpuFpNBihPQufHablT1uvR4=,iv:PmYJUMW5KxxiekPvbtWLiNcBY5S3kiKKxftDkHB2Ong=,tag:6Tnq44HJSP+W2SZJ859XBA==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.9.1
