--- a/kubernetes/apps/default/radarr/secret.sops.yaml
+++ b/kubernetes/apps/default/radarr/secret.sops.yaml
@@ -5,7 +5,7 @@ metadata:
     namespace: default
 type: Opaque
 stringData:
-    APIKEY: ENC[AES256_GCM,data:LdrId5Of16zZiWtO8Vt+cnwzCPlAJkLqvulPfzB8sAzajqb7Zy3I7mNjEMsRs6Uxxn7OCxiPKIsEPTxtYV3RYxWPQAmWb09OIXgCQnQLLJG0PvpRhfiKpB3Vh28GzuQHRuWBGMHZ3VeEjL/17xLD2n4EUXJWtf7GYvbFQIdm3xnZrUrmtG3p9toAzeHixEwm4/WlQbbrLg==,iv:kOy2mz/6x8HMJzYWp4hB7T0DrvRI00GhPk/wO9fyBko=,tag:a1DxMyfr7CkETB1bakSmyg==,type:str]
+    APIKEY: ""
 sops:
     kms: []
     gcp_kms: []
@@ -21,8 +21,8 @@ sops:
             TzNDVmxIVUJueS9xNjZVTElUMmJIWUkKYw3ma1L0HmktL17gGeOKWNkTvXvMTiaA
             uPdwHcuMR1qyqhfEDiwW37uGVLh6/oB4A14b1CO+5D5ZxSmO9+9JQw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-10-21T20:39:20Z"
-    mac: ENC[AES256_GCM,data:yyDTMiJ4fDxmA5ZR+l1GGjwzKXbPwOzjVTdHWVKpR0jYc5fFkl2ClJJTYrGsO9TJgTqdhUn4f+XrTcaLM9tb+JdTqKERlOpGcT1VCaddI1hcLHY0I4adYEhgpDbt8EzqQpc7TlH2LrMIo4jVocCSia6rCuF7xayLj/1LkL6aM9Y=,iv:RJug1UrGnskga1zUt7q9P+/ycXn/UNrBN3ipCbpvuV0=,tag:LYFiFK/GbCDSXdvygcUmXw==,type:str]
+    lastmodified: "2024-10-21T20:51:06Z"
+    mac: ENC[AES256_GCM,data:TNyLTXGe8Byal8X3PQ+gZdbkSdNU1Cn8tMa/XIsM5otLAqDCTAjakMAh70fAw50XDODK23MUGX7P4IeTYHYYSjGh+4ESL5Ywd5bnbXU4jjtINvqXO41PI2aJHyTqIsf/MbRQIUdyGSMkr/qqGFPtJkEB28yhNJiFz8R1W9/TMK4=,iv:tm3adk/nKfsg9Jxr8MWvcJ/jHAywp7Ol6eoyglRx/BM=,tag:t0fOA2zNXPjh+/Hdkm64hA==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.9.1
