--- a/kubernetes/apps/default/sonarr-anime/secret.sops.yaml
+++ b/kubernetes/apps/default/sonarr-anime/secret.sops.yaml
@@ -5,7 +5,7 @@ metadata:
     namespace: default
 type: Opaque
 stringData:
-    APIKEY: ENC[AES256_GCM,data:n76PI130zoYsnwU6gQlOK8TbxiLY4AMzOb1DVWGict0HCZDuWXG9Hb66p0pNzb9hMYxMtH95peQv9bLyGU1y28RzK0LcH/qglYLVqxqtRuygBtF4Ke6IC87KADmS60NRo4lxTC2zKXdRRXzlA1OLqYlZezlsZtIeqytGQEIzAUzcY90BzcGaFAE2/+CAwSwG1GMU+7pZyg==,iv:dKxERO2hX3fmncNzKfz8Kzl0pz56BSkHbZ6X6pe6PJ8=,tag:3FcyrcvuGACwfETXa69dlQ==,type:str]
+    APIKEY: ""
 sops:
     kms: []
     gcp_kms: []
@@ -21,8 +21,8 @@ sops:
             WHpQeTQzQjN0UGhUdXQ4Zk5iTUpUWXMKfDRRduXlo/klML2RN0qOlYIQTlXF6XS3
             CiVwcjrYs2OvmZnXCYY8IwP4CbpTAJcHDwkiI1LEfx5LEHDp45uojA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-10-21T20:39:21Z"
-    mac: ENC[AES256_GCM,data:oV89korQX6syIQpnIsoqakdAtu2nCCC/wkxPraHmI4QtBlAMeipdBAppTGBuFSdLKz+fRvfjq9JdH/dbbxyjoMGhB46CQYkKoOsPcZh8SdKaaIRYNroqqBDJ5wbnvHdT742J/H+auFW8slcClRCnwgoaYVDt4bsGHRcZc7wLZFA=,iv:Z/Scf3ji/cGfAbOQaR/zXvaAtRUbUExfgvNsWXm+EX8=,tag:yr0eqac9TT8fwf5U5dmZwg==,type:str]
+    lastmodified: "2024-10-21T20:51:52Z"
+    mac: ENC[AES256_GCM,data:xgP5l5n9qi5NtW+Hkykq8Ath61qtoaHscPreYUDMGClMXWYi8rmc7q4QPmVaa67MyYq77le6ZhLbpkv18JFKSy9e8xf73gCV+98dp0orJERwkH8OKrPrTRm62Qjl2wjpS37h7id6WisFUyC2uM0keg/tKsctfq8AifWC+UT53nM=,iv:3O7DabE1YsCGXXR2ecGDZtYwUNlXgSVhgOcAyAIqIDI=,tag:8PqLPAR4Gqp2LTtlPG1oCw==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.9.1
