--- a/kubernetes/apps/forgejo/forgejo/secret.sops.yaml
+++ b/kubernetes/apps/forgejo/forgejo/secret.sops.yaml
@@ -5,9 +5,9 @@ metadata:
     namespace: forgejo
 type: Opaque
 stringData:
-    email: ENC[AES256_GCM,data:FkZ8zeCx8WdrmBeUBYUnQ27ylUGGZeR0EMqYYVrO3bel0m1FqcoKjPftgIm7+AF8ySZHz21BEvLFzGkMQ8O4Z/efqOvqiIAUxFElOhf+9iqmEF0mhdsErZdSJKYiPQ0boVIlVqFm6YntrhYwVvuR6a/UmpW5rOxI3t0gMdjIW+RvqqUBESu1yWQK1A==,iv:eKwZs9bDfALMMTIC0wS8VAgCFGZYSMrA5cJGxI65JY4=,tag:/lpjZ5yQF0Ly4rqldEMGlA==,type:str]
-    username: ENC[AES256_GCM,data:zqkQ21cRtxi7gXO/1pQR+8+036FC9TxRwQGZPb6zA/DvcPDEWXzZRV8rNtF3pDXW6GB2v8quSmOQ62u0ThmudL+h9uIbYovK5VYH2S1fPyDoI6eXptefpBUVfwrQMaf0KZN2C6UPW0eqI+uQUfrPrKtZc/1Hp+E=,iv:95QOHcFoQVC26BzCOBlzvmq48ekUOK5bn9GmhSVTdh4=,tag:htw68RNOJ23B6YDF9RyaVQ==,type:str]
-    password: ENC[AES256_GCM,data:UTU4gFjALvpzBqSHPmp5whLKPrUPe9E2uZHqygq32Kby4ugGIDJpxLV5aC9U/Tffr5IGM3+4eZOIU9XHpccxPVmiYWdQ99SlWwX247eamwfIu7dfFZvQyYe2mosH8X0NxOSSW3/p9jQXke5kmcQCIUtN8i1z5TyBhTV8wxOaoQ==,iv:NDYYghdv30ci4/6VeSSoLVh9v2i92rOYo+LME6nNuEk=,tag:/s4qHpG/RlvTUufbK4JJSA==,type:str]
+    email: ""
+    username: ""
+    password: ""
 sops:
     kms: []
     gcp_kms: []
@@ -23,8 +23,8 @@ sops:
             eWd3VkVmcU1WUW1YbTM2Z09IdkRuTVkK9MDlWX+R39ucTFzW1gx9vsdQonDzq3mO
             a/q6ZqbdszU3v3e5AOVF+mhqyv+37D0O+QvQ+u/TROEzs6YDxmZ5vw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-10-21T20:39:21Z"
-    mac: ENC[AES256_GCM,data:fh1UufJrc1FGvTc2eESEhCKBi9lgIEPTYGQnwXHxeO9Jy56hpAE/+4YqI5v/QtVBQLO/4e2EIsUyuct8vfIRB855q9fViOBmh/8USGsljZqeNPhPMX/szGR9fI9QhWpngezLLfp/2k6QfM+6GbDANCDuEnjoec5X5Myh2lHmR1M=,iv:WP9wYseO2/Gu2fbxYLEsSZndxRLyi0Az+r2d+BVerx0=,tag:F2bJnfsH9lErApb5rNW9fg==,type:str]
+    lastmodified: "2024-10-21T20:52:17Z"
+    mac: ENC[AES256_GCM,data:MEb0tUCtQDBpw8rQQWdfmiCZ8MOWPor8255gpFTkGPlClYhzlaSyVwXihZZ+Dp0Zc1TWBZ3aKdGPyyZgA56GWcmtTTuSg8l+BITUH5xwKlGxk63dl1PP0VO6IXpTtvKAHp7a/G4zm98OM0PJVHNteUIh6j0KAdELN57Wcxl49f0=,iv:vuJop8V0Cf8gVRv9SgxEUWu8xrkNYfeKkQh81JxiV/U=,tag:wutQWiCBFRI3L/3de/JKFg==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.9.1
