--- a/kubernetes/apps/komodor/secret.sops.yaml
+++ b/kubernetes/apps/komodor/secret.sops.yaml
@@ -4,7 +4,7 @@ metadata:
     name: komodor-secret
     namespace: komodor
 stringData:
-    apiKey: ENC[AES256_GCM,data:z23UiooKcRr9tlj0DbChjB1A7FCB2t4zW7i0y1qHdhOHQUGOq2edAWnbcFJVrR6XbjfzRQdNIihVnuf4H/gx79ZQ+b081g1GT/+GNRVZmkkFDSzcpS02iXtTonO2yhyjtI8jl8/UvLt1zfDs+vWc7VDwqJmQCJwA3tK3XIT/NFLfOfLf1PqFbS1nJpaTBqoLMjdvDZWnBa6Jfkg=,iv:FZ34d/e3CyvdAHyMWDKL9eGZC+wYqysfn7R9iBu/8OY=,tag:zXaaY3ngHeLElMvBeQs9cg==,type:str]
+    apiKey: ""
 sops:
     kms: []
     gcp_kms: []
@@ -20,8 +20,8 @@ sops:
             TEMrdTExM3Z4eVNmUTdNN0YzZUtUVWsKnqyv6BmAU1cB3FWnSUjlMRMNVYygPlth
             nP3hS5JA+R3KrxGmCJWbn7xY3qSAnHEryVSyK4mtF8/cWr4BHaUoEA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-10-21T20:39:21Z"
-    mac: ENC[AES256_GCM,data:kuRPSkmtDKCiZZc2P2mE2FgvhAcPMzvUlJpuwiM1vKO2i2Mi02dNqvLHr1FfSbsnIxJf3ZaknwaSDFtxvHiLMZyZjcEKIr/79PakP+zKfdFszGDZKmy3YprzSjjaAfRWtayGj0z/cE9+n4MZ+c+gtuq2tzIyYOFrca7jDSL1Llk=,iv:+b95esy7tsWA2yKzQS9n0xbhtwKcuTrAHKFx6CDeQ3o=,tag:5ogBgXzjvPqMbaaM0WaLLA==,type:str]
+    lastmodified: "2024-10-21T20:52:27Z"
+    mac: ENC[AES256_GCM,data:RV3aWRQfxbQc2pUrNRSG5jNeOYIYJTZY6Yrdw0pzTcYBj0uPCXnTyZ4tBSdbfWcOClOmggY4AY/4izq6VDWnqPIeS/RBbouvae7S8OtL6XzFb134vzLhpc4DdQ8lj1hds551u7zogn97NBLxywV1ucsvgk7nWvq5foRhBt3esSk=,iv:hfUQTNvqHVykEscqgYl5tO2SGv16nCoR2L0flqdxKEE=,tag:qHDAPRPvGygN52xQa/B94Q==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.9.1
