--- a/kubernetes/apps/default/prowlarr/secret.sops.yaml
+++ b/kubernetes/apps/default/prowlarr/secret.sops.yaml
@@ -5,10 +5,10 @@ metadata:
     namespace: default
 type: Opaque
 data:
-    API_KEY: ENC[AES256_GCM,data:9UJjUVt50CnOC/kLhv9CL0bsa2Y8L5yg1Gmeqwry2kFuFyANWRza3N1SrHUoyZ0kpY5RLC9L0l0uOa6V7i/dIPnPCJr4ZyXNl3gp1bsRZlCg/ItTe5JlqTRaMDtjj4jOapeVA/f23JIHEq8NlgTa7p+f+wMIurtFLUn5JAY8zfv/HjT8eQEIkdOKhF+HDvYyrZtEnxGYMwKNFof8+fqCavlrAC+9zrg=,iv:hzOpxLdO8elQXxyxrQ+85Qj+h7JMeWluXp3nHucpCSU=,tag:pOmFJNWoXFNFtPIKh3aa7A==,type:str]
-    APIKEY: ENC[AES256_GCM,data:LjU7VMclEYMPSsuFZmNNNmlwbs6FqDv8gkfQ9UOnxyO6+dtejLq8fl/uGzhmxC6sL+BLGxwyML0Uw7t26OAJtY87afsNSjFHrYeBMMqM7wq8pxyx/kUsuaIokHcBOGEGA58A0blvCKL96zf4jad01n8B2515v4h1ZHzK3OJAgYiyPSBghVo+H0m+/pdKrjugBUOpoF6dAIi4AmptnKAh11QsLiFC3kc=,iv:u6yU55BNUZ1rA+LmBEkKH6aziDCA5tlbmyS37FckYEA=,tag:6YrNkejUJdcgvyAFx75FLg==,type:str]
-    AUTH_PASSWORD: ENC[AES256_GCM,data:tXTYY5LPUeD3Pvfop6wQ+Xj1SuFCEbXAsYyl0G3q4zShaFnmcUMdphsxWl3VBwzcGKs03B5vWkauYpQjtgS/bptaEVUosmTQGssN9kUzQpgAi4HNv1l45iX5CN5RZsgJ5KVin1sK7StCWGfQDZRaI2Z6oTLZNIM=,iv:bWgo3VBV6wub3i809DI9c9M6e0XN+nmfIvmCtlNKFDA=,tag:TogJO/CR//OGI7HERSeyKw==,type:str]
-    AUTH_USERNAME: ENC[AES256_GCM,data:iCICYxKGB5vTJkPlSnCFMuuz9uOJ2RLBXHadMUjmQpeWrmBeydw/A9OCa4lijXa7129OZYNz8HH2kpmMqI13IbR0FuFnovOD8w8QniQ3X0NivlMkM2joN3s2DTR2lt6PLb5U9CAvXXApQ7LWe8nQAe9Sq5uJj3z+/FGk,iv:ldlQRuD3DPWxDmCXG1O/3mcWXUknzzoKmtqxd+kwds0=,tag:iAIrjzVvQ12JhA0LI5HQjw==,type:str]
+    API_KEY: ""
+    APIKEY: ""
+    AUTH_PASSWORD: ""
+    AUTH_USERNAME: ""
 sops:
     kms: []
     gcp_kms: []
@@ -24,8 +24,8 @@ sops:
             NExiZE1BcGNGY3RuWk41eWt6UjIwaWcKpJjcWyAO9k53m73KbB9geeZoXw105a/U
             hXJy+82qHd5s4TL2OlkJ8roB5r4jPr/2ApUmVNrqB978ps/wjiNo5g==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-10-21T20:39:19Z"
-    mac: ENC[AES256_GCM,data:EWppEUOowUkieIWzUYe90nK1/aWxG6+QzJcvMrQvdmbloJFNBSgmCq2rojQ8Ak2L+W66FewimxAeWzdyb25PKrirMOVyrl3gnO4/TZSbxBeA1AEjuSkl0Uhk+Wxa3i5EvrjyEtOXgabHHqVLIhRuadZnljfYLwByA3a0YppNlV4=,iv:4hjvamyZsaPgQ0mZ84BYjRBdNz3fQ7RD9suqxZFI+Pk=,tag:4Qz59JNkYznjPvwjkS3x9A==,type:str]
+    lastmodified: "2024-10-21T20:50:39Z"
+    mac: ENC[AES256_GCM,data:Sy+AKR03GMP8onCo8m9wOfLXqipXyXTTGDbRnGfFIWpPWB44ha+6bZNJsVVEykJjN9v+BbcNJmveIJrhPFmxBr3t1VuA1zWvMARzcdN+GqfuhB1uL25zw0Vh10olUtaf0044ImrTFE3Qv6L9OEX1aGu8nVtnW5CBJFaPG0O+LMc=,iv:goOs/Klil1y9IdR0O7lt8Mfs3ReNvacGowbq8zBTWPM=,tag:FCKUSbVq2KP0khccM0whsQ==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.9.1
