--- a/kubernetes/apps/default/sonarr/secret.sops.yaml
+++ b/kubernetes/apps/default/sonarr/secret.sops.yaml
@@ -5,7 +5,7 @@ metadata:
     namespace: default
 type: Opaque
 stringData:
-    API_KEY: ENC[AES256_GCM,data:87TBpbofEh5SZc7aCkq10MsMnv20LTctiV9xQERuz3zLICoMLHu1pYwNe7K/reXt52sxGdqP/meHjY8ZywxGxYXVh1X5VAyGcOD4p5elQesN16ynTISka0sH8LIeastdXxJYiVK11e1HVyo/NAyMO94Zau81/Zk6jxpfa9/Sa+hwgvbpWcuu9EKQVZbzAq3KvcHYSpNM8A==,iv:W7VJR9FkSbDa9PadFpfk72r5cplZP81UY+qle//Kwc4=,tag:yRTkTpf748+8x7AmieuS/Q==,type:str]
+    API_KEY: ""
 sops:
     kms: []
     gcp_kms: []
@@ -21,8 +21,8 @@ sops:
             Q2cyTkVPL1F1K0p5Wks3aHk1T0ZwUG8KijJMYsWveXlI4cShIbY7N4gIX1E7qvTS
             rwQyKnSD4Zsc3v1s2EbKvkyZFsd15hN6Eahvlk+0jqhckKEXCE0C/w==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-10-21T20:39:21Z"
-    mac: ENC[AES256_GCM,data:aoCFTj9wDnhiGIVxD3c/ubzYPtnfupDcXQ1WGief1UnSnSNJPT7SECa5Uhkw6x+ibTJr+Ra2WJQb8BVL68o3AvxF0dpQOwg1276nop8Y6urMkyi0JrEg9Ak1NrWipw+ztCSBvYn9WN7j7ydWl74brEG8PSV3x0diIZKnN0PC+Tg=,iv:85KFiOp5lJPliCIglmBpQwlZsXJE1TvEVvEdfI2y9Ow=,tag:yNJPnNiBeI0cT2NZ+MCxPg==,type:str]
+    lastmodified: "2024-10-21T20:51:43Z"
+    mac: ENC[AES256_GCM,data:FcgighwnM+CvafwsijpzntgRaZF4koTyJV0iqN5rCWT3qDzWXV554LGRjP4j4pzeuai+DtB5upZtexGp/ahpTtUysbz+kNMxoRtUCJFf9s577MxdML3u4MCCEYg0Bb1mYaRdNs6YeOGNJK3ZiCzdl1FcRxPxLRkZTqAeg6gpS/o=,iv:cKwbWILW+43/eZ1pnzNEOLwRCU6jd2nLSeLfL4WbXp4=,tag:TtAZ7MjfqikyoNINHs+jUg==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.9.1
