--- a/kubernetes/apps/default/bazarr/bazarr.yaml
+++ b/kubernetes/apps/default/bazarr/bazarr.yaml
@@ -1,5 +1,4 @@
 ---
-# yaml-language-server: $schema=https://raw.githubusercontent.com/bjw-s/helm-charts/main/charts/other/app-template/schemas/helmrelease-helm-v2.schema.json
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
@@ -42,7 +41,7 @@ spec:
               repository: linuxserver/bazarr
               tag: 1.4.5
           exportarr:
-            enabled: true
+            enabled: false
             image:
               repository: ghcr.io/onedr0p/exportarr
               tag: v2.0.1
