--- a/kubernetes/apps/default/tubearchivist/secret.sops.yaml
+++ b/kubernetes/apps/default/tubearchivist/secret.sops.yaml
@@ -5,9 +5,9 @@ metadata:
     namespace: default
 type: Opaque
 data:
-    TA_USERNAME: ""
-    TA_PASSWORD: ""
-    ELASTIC_PASSWORD: ""
+    TA_USERNAME: ENC[AES256_GCM,data:PgjJx9sTNA==,iv:MwvNx0+mw3LiHA8IRiJ+hFpFqrCVDADcdEd7CdkYaFQ=,tag:4sOQLykq9rI/uYZX1TTz0w==,type:str]
+    TA_PASSWORD: ENC[AES256_GCM,data:RXukkE05,iv:boSFmkQBp9+iGVJk6rHxtSrHEmg/C4yJy0LCJp3abIs=,tag:o5/ttrulgdsG5OKzumbBzA==,type:str]
+    ELASTIC_PASSWORD: ENC[AES256_GCM,data:T4Pt0ALC,iv:WwJWEEnn7z+pdemXYBAyCVEWOgmr9jqpnSp6HcDO7Yo=,tag:r9WKeobPn6yp9Bom1UU5Tg==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -23,8 +23,8 @@ sops:
             M2xzbjJjNUxQSU90OFEwOU1jUkFkQ2cKAt2jn87Eqvb6EkIxFqhtl6dWz++TvFzw
             IxI8fpfrTtUBciO/1yY45wQ6lbVTlGgRlQov2Cf2uT6oAjPjWBHAvg==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-10-21T20:52:02Z"
-    mac: ENC[AES256_GCM,data:b1fnSlXsjN96oCeLm/YQnjOMSZha7WtDgQPY9BQj+9CI/FmK0tMlp5WpYXSe0SmBRl4koJfaV3M06VR8DqAoRnTSOWlqnxJRBz+LSGxaj+yrAsMjq1FSlSX7FZxavvp04HRD+57TMfNU2MVRBAeJwVYwT6FgM3K7xQc/QReLlQs=,iv:H/x5ay29bVU729TUWX8zHJvp7iFoFcDbgMWPXPpxGrA=,tag:aorlX3e8GLO9B/MIza+wpw==,type:str]
+    lastmodified: "2024-10-22T03:17:33Z"
+    mac: ENC[AES256_GCM,data:E/0ftm1e+K0Jo+sZ1QwxyYpBOWGYbxAIlSzsCdHKb2ZTVyhETWHyeyZXghqFlOnrqL8bGEpaoE1Bw3knk6LNklRyMBwtrtYQnC1IQqsd4i9H2v2BVVQOqmi6DDVYdc5J933pFW6XFbEYt70Dy3eBanYC/oj58Nt1TFXByxg4jho=,iv:9pRdM3BwpIzA/ny6phxQW0NWgbmuySvGT6FUHuo/1jQ=,tag:t1jTrdApcDF33crnGflnmg==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.9.1
