--- a/kubernetes/apps/network/ingress-nginx/internal/helmrelease.yaml
+++ b/kubernetes/apps/network/ingress-nginx/internal/helmrelease.yaml
@@ -26,6 +26,8 @@ spec:
     controller:
       service:
         annotations:
+          lbipam.cilium.io/sharing-cross-namespace: "forgejo,network"
+          lbipam.cilium.io/sharing-key: "ingress"
           lbipam.cilium.io/ips: "192.168.1.202"
         externalTrafficPolicy: Cluster
       ingressClassResource:
