--- a/kubernetes/apps/default/bazarr/secret.sops.yaml
+++ b/kubernetes/apps/default/bazarr/secret.sops.yaml
@@ -5,7 +5,7 @@ metadata:
     namespace: default
 type: Opaque
 stringData:
-    API_KEY: ""
+    APIKEY: ENC[AES256_GCM,data:IsbX,iv:OUvcqVZqBwJZrQ2nyJ6ZWJ01vQ+Rk4N62pdLt9M7pI8=,tag:34PSy/dFAGIPIIsTYyLj5g==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -21,8 +21,8 @@ sops:
             dVVFbTI4b1hjYkp6RUFiZFQ0cmtnaGcKa7LLrgJbqqenTMuvGKLCOL/LyDyChe/G
             bmLqPMfRAmvPV6YhrzBME9pMTNN0Uoz/mJKOAVKXG7F+KbMou0Y9eA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-10-21T20:45:58Z"
-    mac: ENC[AES256_GCM,data:SMrWFVIHJ19dKg6KQ2213oR9MWIqFYQSUYPM+fhIASQyTFAcXKQCoqSz6k2yG38/iAJ+9u94yij5OdOGzKoZZNTd16666U4lQosBgZS8wYWzL0y9LuHK90RPqRLbgHxjqJ8mt4pe4/LIe94u/RbvfEmjPKxmo4xXfsIEmdkuXLA=,iv:ihL64x9IaOv2aGIVBdj079j/HR3wJkOYluDLrljMSgw=,tag:7CqWn+2DMtvqOU8R7OSgKg==,type:str]
+    lastmodified: "2024-10-22T03:47:53Z"
+    mac: ENC[AES256_GCM,data:nUq0FQXMVjWLc7+G0Cum0+itZwiVax4JfCGSPgkEmUG91Wtam1dDOsg/ZnZK0UdDxCNWCaowlVHlGaZF0zcV54yPXCwMT8H+EJOIvRk0Siu8IGIAZag5h9gqi9Lj3I8mnSY1WE4rSDIv4PyC0YkP7hzQBNlFQkux8gxxaknglD4=,iv:e1d5mrIkmNgcS1Dg2/z28Ub19mpnpB7zAPpyI6foIw8=,tag:u1ePbm3VhRZVI8myYsU5Cg==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.9.1
