--- a/kubernetes/apps/default/prowlarr/secret.sops.yaml
+++ b/kubernetes/apps/default/prowlarr/secret.sops.yaml
@@ -5,10 +5,7 @@ metadata:
     namespace: default
 type: Opaque
 data:
-    API_KEY: ""
-    APIKEY: ""
-    AUTH_PASSWORD: ""
-    AUTH_USERNAME: ""
+    APIKEY: ENC[AES256_GCM,data:ZnaV,iv:uXrVDLikG7MeHFKaJPFKKLX5DRn5jPzUC8C0rUzryyE=,tag:3Gzw2i7fat9zNmkufCZ40g==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -24,8 +21,8 @@ sops:
             NExiZE1BcGNGY3RuWk41eWt6UjIwaWcKpJjcWyAO9k53m73KbB9geeZoXw105a/U
             hXJy+82qHd5s4TL2OlkJ8roB5r4jPr/2ApUmVNrqB978ps/wjiNo5g==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-10-21T20:50:39Z"
-    mac: ENC[AES256_GCM,data:Sy+AKR03GMP8onCo8m9wOfLXqipXyXTTGDbRnGfFIWpPWB44ha+6bZNJsVVEykJjN9v+BbcNJmveIJrhPFmxBr3t1VuA1zWvMARzcdN+GqfuhB1uL25zw0Vh10olUtaf0044ImrTFE3Qv6L9OEX1aGu8nVtnW5CBJFaPG0O+LMc=,iv:goOs/Klil1y9IdR0O7lt8Mfs3ReNvacGowbq8zBTWPM=,tag:FCKUSbVq2KP0khccM0whsQ==,type:str]
+    lastmodified: "2024-10-22T03:47:29Z"
+    mac: ENC[AES256_GCM,data:2U4oolBuAhnZ0PTs56PVuQkvoGI0gGXC/QZd0Eenm0AIPKoIdT5vJej6bsSmbwmmgaJF7GoAJKoF8laWkhPn9qnMyWYjcnk2DHfK9kh1za08QAupCQCxEFiacKrSQV6FaXOPblU+9HQ33VtJJHb7fsGntx5pxWc+QdQ8OkcdAyY=,iv:xFNY9aDaz4z1AImhb15RJuZa0FWkAq6ae+lbKAvLQ7Y=,tag:WK3/RvIqHqy9KdddW9fLJg==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.9.1
