--- a/kubernetes/apps/default/radarr-anime/secret.sops.yaml
+++ b/kubernetes/apps/default/radarr-anime/secret.sops.yaml
@@ -5,7 +5,7 @@ metadata:
     namespace: default
 type: Opaque
 stringData:
-    APIKEY: ""
+    APIKEY: ENC[AES256_GCM,data:FF/G,iv:6GZM+6qxVeKZjpW+8NKPG6kmgsV5s2vXQ64PFu/uLuA=,tag:6gmayT6xDeu4842hG9q/Wg==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -21,8 +21,8 @@ sops:
             WE5NUlBwK2J6RDZ2WDFXVmZHSExrZ1kKfn9a3Sr2PsIgmpZbLdh60AUOQ9n4LcGp
             dFmBJJFEkdgVaQe/wSf6TJkFrsHhgBmFleUugrLZKlYrwCaqplK20g==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-10-21T20:51:16Z"
-    mac: ENC[AES256_GCM,data:7MHYA2GiJal0RrrKa57AtKn0XD0TSXsF1OVqMLcFCnUMqdqkJAIK5YObs2B/VE8xtxaaDKsuQWfxT16nf83vu4qHAPiJCLihU0NdUUsruuNXLI2ZQHaWlrHQUV5UwbcIHC/pMDOVjAkUmnn9Jmd2tpuFpNBihPQufHablT1uvR4=,iv:PmYJUMW5KxxiekPvbtWLiNcBY5S3kiKKxftDkHB2Ong=,tag:6Tnq44HJSP+W2SZJ859XBA==,type:str]
+    lastmodified: "2024-10-22T03:44:26Z"
+    mac: ENC[AES256_GCM,data:ssgIVnR68cxkhw54uDed2NVgg24IyWeeOBPWFAisRmLFZ6jWnrou/9KrI84FAts6bKgL/KDSNJQ7dBEnfKuOsY55wkBsMnydylCfU+A48+Gb0e4NvrjwjEguYKpFAq7fLJrUVI+TDquCvPpkCfiWnJnFFN363Bnxun2cGx754Uk=,iv:LgNDbfNZwjw0KBt6kYBNoCmODjw6DZ+450IeaMfYDio=,tag:umMpKk66U+hNjq9hnskQug==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.9.1
