--- a/kubernetes/apps/default/radarr/secret.sops.yaml
+++ b/kubernetes/apps/default/radarr/secret.sops.yaml
@@ -5,7 +5,7 @@ metadata:
     namespace: default
 type: Opaque
 stringData:
-    APIKEY: ""
+    APIKEY: ENC[AES256_GCM,data:jM22,iv:Fq/LYfgiJ19f9cvlXVK9fS7hXDe/R/eFWKaVmFA5cPA=,tag:aoIF/GIog0qaPyxq6rvUJA==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -21,8 +21,8 @@ sops:
             TzNDVmxIVUJueS9xNjZVTElUMmJIWUkKYw3ma1L0HmktL17gGeOKWNkTvXvMTiaA
             uPdwHcuMR1qyqhfEDiwW37uGVLh6/oB4A14b1CO+5D5ZxSmO9+9JQw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-10-21T20:51:06Z"
-    mac: ENC[AES256_GCM,data:TNyLTXGe8Byal8X3PQ+gZdbkSdNU1Cn8tMa/XIsM5otLAqDCTAjakMAh70fAw50XDODK23MUGX7P4IeTYHYYSjGh+4ESL5Ywd5bnbXU4jjtINvqXO41PI2aJHyTqIsf/MbRQIUdyGSMkr/qqGFPtJkEB28yhNJiFz8R1W9/TMK4=,iv:tm3adk/nKfsg9Jxr8MWvcJ/jHAywp7Ol6eoyglRx/BM=,tag:t0fOA2zNXPjh+/Hdkm64hA==,type:str]
+    lastmodified: "2024-10-22T03:46:46Z"
+    mac: ENC[AES256_GCM,data:eOPkR+NS/SaZLy6RgmrsIuTlbMYPW0wOuzSq7O+Se9YluMHjX1IjZTVIBuw0s8hMiyzjFV66aP/Wt0lr2Pgyb1ZKrz7AF34NsqKEibXA7bZhBCZKfsYw17u5ivZKXkbucjjr06VhAytFUpAQJ3j9KmEpPAueYEpzSKDh+kT9Vr8=,iv:MY8wwYcvZtxOK3xvZ4MO5+2cPkqVlO+ahDJO7G7Sk7Q=,tag:JOHB6RIQT5B9RZ525wPlBA==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.9.1
