--- a/kubernetes/apps/default/rocketchat/secret.sops.yaml
+++ b/kubernetes/apps/default/rocketchat/secret.sops.yaml
@@ -5,10 +5,10 @@ metadata:
     namespace: default
 type: Opaque
 stringData:
-    mongodb-passwords: ""
-    mongodb-root-password: ""
-    mongodb-metrics-password: ""
-    mongodb-replica-set-key: ""
+    mongodb-passwords: ENC[AES256_GCM,data:kFCIL824+IkMXsyRKZehajAa+LlKtJ0HX5ZcDRc7XgM=,iv:ljkQtzUSy5ubhFdHzzJxVaX1+grncOzGevRxqkm9Yq4=,tag:QaWU9lnhjeSYuD3CBWVs5Q==,type:str]
+    mongodb-root-password: ENC[AES256_GCM,data:UZkYd5M6aIWaqUjGv9E3N1OkKoTMoLNV8bv4aBB0tBg=,iv:b2du/tpFcEZYaBe1UGz3yKL8s+FHCFUCWeSsH7Sq2HQ=,tag:kS+OPd7D6uw4WVXLe3UIpg==,type:str]
+    mongodb-metrics-password: ENC[AES256_GCM,data:8uH2Ci6oDrROU+j4gtqNNFLDMpxARypDEn8PxdYy79k=,iv:k+S2A0vq8hJdyhnr+sM8fV0/EsWOhl8nt64/G/A+6+Q=,tag:vwvZIYJOJk6WWz+DY55Oqg==,type:str]
+    mongodb-replica-set-key: ENC[AES256_GCM,data:6DM6s/tAjAZmF/rv141e9sJIQQN6l6thobGRVwnaXBk=,iv:dJBB9mRcZ9mXzx9SUzLfJnIUWHQQbVhJYj6AcJ9/4hM=,tag:TAxSL8ybroj09fHlamIWeA==,type:str]
     mongo-uri: ""
     mongo-oplog-uri: ""
 sops:
@@ -26,8 +26,8 @@ sops:
             Yy9hR1NsaXUyZFRPemxzVHVNVW5MOU0Kq32or11Vl33wT2dUbnjTYVr+0J8DZJXw
             kkLaKI5JFwOsQzKze3pNhig53/G3RB+BDMBRBxmhAI3x1pljuSzE2w==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-10-21T20:51:33Z"
-    mac: ENC[AES256_GCM,data:7bCMZSiV9GTLDMSGa+KLGMY/tam4/8WUGbxup0cTWTNx4HUYKqctUBP8b2YmmIuy5tNsNdaSQUDOoOM7+la+AdZMoN3ZRaI1i5P6ov6TtYPbz8sBCsuw32QozMaEI37sYfXfqkd4vIvT7/NE46mW3b7zr2v45LsmxvDRtTs8UBA=,iv:/H0ZyjXoqyYBq4KTrz0Qjl6kKJvktg7CYQCxl2Ei2Jw=,tag:olRI2llij9FAhU1R5Wuq2g==,type:str]
+    lastmodified: "2024-10-22T03:45:12Z"
+    mac: ENC[AES256_GCM,data:OL1oY1h+QsD1oGwxD9Uh+SluVCuKiSz+UWgHKCgkrOBeBl6080CJV8HaeRJi2JlG6LrfPBVGP3ZlERANd+0Z0mlJZCNMmO4/hoUqaI/RdB0Okjjo44WIVAi8rEfIkaZs8J4IAgM/2WD/rpIA/TtrAZA06cQ0d0UYJi97woz/njM=,iv:HfG2qw4gcbjRciauuJxu7oreTYvHW/PDzMW20o+gLLQ=,tag:GGX0ZPRXv6q1awslFqwJ5Q==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.9.1
