--- a/kubernetes/apps/default/bazarr/bazarr.yaml
+++ b/kubernetes/apps/default/bazarr/bazarr.yaml
@@ -52,7 +52,7 @@ spec:
                 valueFrom:
                   secretKeyRef:
                     name: bazarr-apikey
-                    key: API_KEY
+                    key: APIKEY
               URL: http://bazarr:6767
               PORT: 6768
               ENABLE_ADDITIONAL_METRICS: "true"
