--- a/kubernetes/apps/default/sonarr-anime/secret.sops.yaml
+++ b/kubernetes/apps/default/sonarr-anime/secret.sops.yaml
@@ -5,7 +5,7 @@ metadata:
     namespace: default
 type: Opaque
 stringData:
-    APIKEY: ""
+    APIKEY: ENC[AES256_GCM,data:nns1,iv:2EhEl6AikMlrEvTYo28RUOr07VKYHK8f3dVG1xKVNNU=,tag:9KpgH0lWLCqzewDUXytpOQ==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -21,8 +21,8 @@ sops:
             WHpQeTQzQjN0UGhUdXQ4Zk5iTUpUWXMKfDRRduXlo/klML2RN0qOlYIQTlXF6XS3
             CiVwcjrYs2OvmZnXCYY8IwP4CbpTAJcHDwkiI1LEfx5LEHDp45uojA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-10-21T20:51:52Z"
-    mac: ENC[AES256_GCM,data:xgP5l5n9qi5NtW+Hkykq8Ath61qtoaHscPreYUDMGClMXWYi8rmc7q4QPmVaa67MyYq77le6ZhLbpkv18JFKSy9e8xf73gCV+98dp0orJERwkH8OKrPrTRm62Qjl2wjpS37h7id6WisFUyC2uM0keg/tKsctfq8AifWC+UT53nM=,iv:3O7DabE1YsCGXXR2ecGDZtYwUNlXgSVhgOcAyAIqIDI=,tag:8PqLPAR4Gqp2LTtlPG1oCw==,type:str]
+    lastmodified: "2024-10-22T03:48:36Z"
+    mac: ENC[AES256_GCM,data:QuTjcJa2SMiEF5AmoG5l1Rmqu9BydaGUK+2DITDb0MCYBUtSBL3g66ux5JCnVZinT4+AA23wdLt/kxJOui+JRfNUAFqjNhss7ui8/W3FIbZM+vrRvxu0uWq77AO++jgTCOpEEvpZmlraiN1uM5mcWRo9fPn3Mt8n8I4Tqkby/i0=,iv:IR8WXGmh9r/Ye+0FFfDwlJNX+SKCVl9GwosJS4OxgcQ=,tag:eJHnWr2PYUMAIKYV7VdJrA==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.9.1
