--- a/kubernetes/apps/default/sonarr/secret.sops.yaml
+++ b/kubernetes/apps/default/sonarr/secret.sops.yaml
@@ -5,7 +5,7 @@ metadata:
     namespace: default
 type: Opaque
 stringData:
-    API_KEY: ""
+    APIKEY: ENC[AES256_GCM,data:WiG3,iv:T6wTS8MMvnc7WlUstzyw3jo7MhDZIjDjOvLqrd4kNrM=,tag:j2e72a9iQZ+8Ainr91h8vA==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -21,8 +21,8 @@ sops:
             Q2cyTkVPL1F1K0p5Wks3aHk1T0ZwUG8KijJMYsWveXlI4cShIbY7N4gIX1E7qvTS
             rwQyKnSD4Zsc3v1s2EbKvkyZFsd15hN6Eahvlk+0jqhckKEXCE0C/w==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-10-21T20:51:43Z"
-    mac: ENC[AES256_GCM,data:FcgighwnM+CvafwsijpzntgRaZF4koTyJV0iqN5rCWT3qDzWXV554LGRjP4j4pzeuai+DtB5upZtexGp/ahpTtUysbz+kNMxoRtUCJFf9s577MxdML3u4MCCEYg0Bb1mYaRdNs6YeOGNJK3ZiCzdl1FcRxPxLRkZTqAeg6gpS/o=,iv:cKwbWILW+43/eZ1pnzNEOLwRCU6jd2nLSeLfL4WbXp4=,tag:TtAZ7MjfqikyoNINHs+jUg==,type:str]
+    lastmodified: "2024-10-22T03:48:29Z"
+    mac: ENC[AES256_GCM,data:H3Ow+GB8UZ7Yp5N8MQsok+y0LxyEBmSY/9Pxmh48sTtTSPfptGcHVfA+3aqVi9ABuojcXVvfyfTSYoMzZhFr0KvBChvcEtg/SV7r8N+i1GLXZBlP9aEDuEvqUiFY1GwEsDNo3jLrUy37XBIWyszzZCCbL8ljOfn9mrmDRojrfX0=,iv:glGAQsWo9oaC3coemsfBoWDnshxZ/bsMUfEgMrRab98=,tag:SqZkjoK8JDLHnKuz7Euyfg==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.9.1
