--- a/kubernetes/apps/default/prowlarr/secret.sops.yaml
+++ b/kubernetes/apps/default/prowlarr/secret.sops.yaml
@@ -4,8 +4,8 @@ metadata:
     name: prowlarr-apikey
     namespace: default
 type: Opaque
-data:
-    APIKEY: ENC[AES256_GCM,data:ZnaV,iv:uXrVDLikG7MeHFKaJPFKKLX5DRn5jPzUC8C0rUzryyE=,tag:3Gzw2i7fat9zNmkufCZ40g==,type:str]
+stringData:
+    APIKEY: ENC[AES256_GCM,data:pMg0,iv:+OndVUhYH2+VsdVF3agHnf2myr+fyZ54QHOQ+3UP7j0=,tag:K2nA1PJZ/SgjMJvs0n9F/g==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -21,8 +21,8 @@ sops:
             NExiZE1BcGNGY3RuWk41eWt6UjIwaWcKpJjcWyAO9k53m73KbB9geeZoXw105a/U
             hXJy+82qHd5s4TL2OlkJ8roB5r4jPr/2ApUmVNrqB978ps/wjiNo5g==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-10-22T03:47:29Z"
-    mac: ENC[AES256_GCM,data:2U4oolBuAhnZ0PTs56PVuQkvoGI0gGXC/QZd0Eenm0AIPKoIdT5vJej6bsSmbwmmgaJF7GoAJKoF8laWkhPn9qnMyWYjcnk2DHfK9kh1za08QAupCQCxEFiacKrSQV6FaXOPblU+9HQ33VtJJHb7fsGntx5pxWc+QdQ8OkcdAyY=,iv:xFNY9aDaz4z1AImhb15RJuZa0FWkAq6ae+lbKAvLQ7Y=,tag:WK3/RvIqHqy9KdddW9fLJg==,type:str]
+    lastmodified: "2024-10-22T03:50:42Z"
+    mac: ENC[AES256_GCM,data:mh+V4MSKN3qlGduBbxmTYjLr1zMIu3IPcYfjIjEEwgur6+DL7Wd0ls9T84/uWTLZzlB2iV5GAteNn8KWgNDjFjLN4+JD+1pT7UarPXSV++ZkrOYXqB6R4B2aSSuknrAtfGmAHis71OITiiyiOWAB09rnymLEl0iGmVNoX8LRGDY=,iv:I50CDR8soff1tu8znysluqHQxiL7zomf/CNOSVq4L2Y=,tag:rDsAttsdfTaoTM63w/m4aQ==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.9.1
