--- a/kubernetes/apps/default/tubearchivist/secret.sops.yaml
+++ b/kubernetes/apps/default/tubearchivist/secret.sops.yaml
@@ -4,10 +4,10 @@ metadata:
     name: ta-creds
     namespace: default
 type: Opaque
-data:
-    TA_USERNAME: ENC[AES256_GCM,data:PgjJx9sTNA==,iv:MwvNx0+mw3LiHA8IRiJ+hFpFqrCVDADcdEd7CdkYaFQ=,tag:4sOQLykq9rI/uYZX1TTz0w==,type:str]
-    TA_PASSWORD: ENC[AES256_GCM,data:RXukkE05,iv:boSFmkQBp9+iGVJk6rHxtSrHEmg/C4yJy0LCJp3abIs=,tag:o5/ttrulgdsG5OKzumbBzA==,type:str]
-    ELASTIC_PASSWORD: ENC[AES256_GCM,data:T4Pt0ALC,iv:WwJWEEnn7z+pdemXYBAyCVEWOgmr9jqpnSp6HcDO7Yo=,tag:r9WKeobPn6yp9Bom1UU5Tg==,type:str]
+stringData:
+    TA_USERNAME: ENC[AES256_GCM,data:SizLWnNuXA==,iv:zfqb9nmkokt0DlMUflPIjrzW5NhSjGluxu/vFRxJrnw=,tag:abg2RaiPYidCAhDPFiUQUg==,type:str]
+    TA_PASSWORD: ENC[AES256_GCM,data:bjWs24IM,iv:J7qIlFPnXH9Vn++VYzRQQ3+kQb75v806tYngl1P+E4M=,tag:tely+oqDwasc5Mjunjez+Q==,type:str]
+    ELASTIC_PASSWORD: ENC[AES256_GCM,data:b5VdYzez,iv:Cd/bDppKjFMrXcmbPBi0A+AxXph3GWiGZIdo4mfoYgY=,tag:d/qAkPAKS0pwzVR+N4LYag==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -23,8 +23,8 @@ sops:
             M2xzbjJjNUxQSU90OFEwOU1jUkFkQ2cKAt2jn87Eqvb6EkIxFqhtl6dWz++TvFzw
             IxI8fpfrTtUBciO/1yY45wQ6lbVTlGgRlQov2Cf2uT6oAjPjWBHAvg==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-10-22T03:17:33Z"
-    mac: ENC[AES256_GCM,data:E/0ftm1e+K0Jo+sZ1QwxyYpBOWGYbxAIlSzsCdHKb2ZTVyhETWHyeyZXghqFlOnrqL8bGEpaoE1Bw3knk6LNklRyMBwtrtYQnC1IQqsd4i9H2v2BVVQOqmi6DDVYdc5J933pFW6XFbEYt70Dy3eBanYC/oj58Nt1TFXByxg4jho=,iv:9pRdM3BwpIzA/ny6phxQW0NWgbmuySvGT6FUHuo/1jQ=,tag:t1jTrdApcDF33crnGflnmg==,type:str]
+    lastmodified: "2024-10-22T03:51:12Z"
+    mac: ENC[AES256_GCM,data:vbdwemtqrFGG1Xl9qJJDJC+WEx/ntAsGBscVtSWGJqDibJWhKakbQeBb6n5ppFB3QUWA30bizLkyVjEE7GxoIEqISQ/XYWaJQ1WEmFR3aESB2zmdIRnU4Ngnthv5k42DVeQMAdxb1fgXSvwq4schxqMumQpqMMQ3f+GkunTdjhQ=,iv:cDRbTyRYSFu4BHh1lm04XqOBZHPS27sBXusnHE8qQuY=,tag:V96USYC70eGFCSDxYDfLqg==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.9.1
