--- a/kubernetes/apps/default/radarr/radarr.yaml
+++ b/kubernetes/apps/default/radarr/radarr.yaml
@@ -75,7 +75,7 @@ spec:
                  timeoutSeconds: 1
                  failureThreshold: 3
              startup:
-               enabled: true
+               enabled: false
                custom: false
                type: TCP
                spec:
