--- a/kubernetes/apps/default/radarr/radarr.yaml
+++ b/kubernetes/apps/default/radarr/radarr.yaml
@@ -57,7 +57,7 @@ spec:
               tag: 5.11.0
             probes:
              liveness:
-               enabled: true
+               enabled: false
                custom: false
                type: TCP
                spec:
@@ -66,7 +66,7 @@ spec:
                  timeoutSeconds: 1
                  failureThreshold: 5
              readiness:
-               enabled: true
+               enabled: false
                custom: false
                type: TCP
                spec:
