--- a/kubernetes/apps/default/tautulli/tautulli.yaml
+++ b/kubernetes/apps/default/tautulli/tautulli.yaml
@@ -75,7 +75,7 @@ spec:
         accessMode: ReadWriteOnce
         enabled: true
         size: 1Gi
-        storageClass: openebs-hostpath
+        storageClass: nfs-client-ssd
         type: persistentVolumeClaim
     service:
       tautulli:
