--- a/kubernetes/apps/default/tautulli/tautulli.yaml
+++ b/kubernetes/apps/default/tautulli/tautulli.yaml
@@ -36,7 +36,7 @@ spec:
               readiness:
                 enabled: true
               startup:
-                enabled: true
+                enabled: false
             resources:
               limits:
                 cpu: 200m
